--- a/AppSGMonitoreoEstudiantil/app/src/main/res/drawable/degradado.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/drawable/degradado.xml
@@ -3,7 +3,7 @@
     <shape
         xmlns:android="http://schemas.android.com/apk/res/android">
         <gradient
-            android:startColor="#cfd099"
-            android:endColor="#9a8478"
+            android:startColor="#ECE9E6"
+            android:endColor="#ffffff"
             android:angle="270" />
     </shape>
