--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
@@ -9,13 +9,13 @@
     android:background="@drawable/degradado"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:padding="15dp"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp"
+        android:padding="5dp"
         android:orientation="vertical"
         android:gravity="center"
         android:backgroundTint="@color/color_trans"
@@ -38,39 +38,99 @@
             android:gravity="center"
             android:text="@string/name_sistema"
             android:textAlignment="center"
-            android:textColor="#900C3F"
-            android:textSize="13dp"/>
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="15dp"/>
 
-        <EditText
-            android:id="@+id/log_etx_usu"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_padding_small"
             android:background="@drawable/side_item_layout_componet_small"
-            android:drawableLeft="@drawable/ic_icon_user"
-            android:backgroundTint="#ffffff"
-            android:hint="@string/hint_user"
-            android:imeOptions="actionNext"
-            android:inputType="text"
-            android:paddingLeft="10dp"
-            android:textColor="#EA3535"
-            android:textSize="18dp"
-            android:textAlignment="center"/>
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/log_etx_pass"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_icon_user"
+                    android:tint="@color/colorTextIcons" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingRight="@dimen/dimen_padding_medium">
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/log_etx_usu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_user"
+                        android:textColor="@color/colorPrimaryDark"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_padding_small"
             android:background="@drawable/side_item_layout_componet_small"
-            android:backgroundTint="#ffffff"
-            android:drawableLeft="@drawable/ic_icon_password"
-            android:hint="@string/hint_pass"
-            android:paddingLeft="10dp"
-            android:textColor="#EA3535"
-            android:textSize="18dp"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:textAlignment="center"/>
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_icon_password"
+                    android:tint="@color/colorTextIcons" />
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingRight="@dimen/dimen_padding_medium">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimaryDark"
+                    app:passwordToggleEnabled = "true"
+                    app:passwordToggleDrawable="@drawable/ic_eye_pass"
+                    app:passwordToggleTint="#8ba171"
+                    >
+
+                    <EditText
+                        android:id="@+id/log_etx_pass"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_pass"
+                        android:inputType="textPassword"
+                        />
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+        </LinearLayout>
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -88,8 +148,8 @@
             android:layout_marginTop="15dp"
             android:text="Entrar"
             android:background="@drawable/side_item_layout_componet_small"
-            android:backgroundTint="#DE7653"
-            android:textColor="#fff"/>
+            android:backgroundTint="@color/colorPrimaryLight"
+            android:textColor="@color/colorPrimaryText"/>
 
 
         <Button
@@ -97,20 +157,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="Regitrarse"
+            android:text="Nuevo Usuario"
             android:background="@drawable/side_item_layout_componet_small"
-            android:backgroundTint="#3d9cc1"
-            android:textColor="#fff"
+            android:backgroundTint="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryText"
             />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:textSize="15dp"
-            android:text="Olvidaste tu contraseña?"
-            android:id="@+id/log_txv_recupPass" />
+
 
     </LinearLayout>
 
