--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_alumno_datosgenerales.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_alumno_datosgenerales.xml
@@ -8,6 +8,10 @@
     android:padding="9dp"
     >
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -313,5 +317,6 @@
         </LinearLayout>
 
     </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
