--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/colors.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="colorPrimary">#DADADA</color>
     <color name="colorPrimaryLight">#DCEDC8</color>
     <color name="colorTextIcons">#727272</color>
-    <color name="colorAccent">#03A9F4</color>
+    <color name="colorAccent">#1da957</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#757575</color>
     <color name="color_black_60">#a0000000</color>
-    <color name="color_trans">#57ffffff</color>
+    <color name="color_trans">#ccffffff</color>
 </resources>
