--- a/AppSGMonitoreoEstudiantil/app/src/main/res/menu/activity_main_drawer.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/menu/activity_main_drawer.xml
@@ -29,7 +29,7 @@
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Notificar" />
+                android:title="@string/name_opn_notificar" />
         </menu>
     </item>
 
