--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/alumnoact_card.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/alumnoact_card.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="165dp"
-    card_view:cardCornerRadius="5dp"
-    android:layout_margin="2sp"
-    card_view:cardElevation="@dimen/dimen_elevation_card_view_small"
-    card_view:layout_collapseMode="parallax"
+    android:layout_marginBottom="@dimen/dimen_padding_extra_small"
+    android:layout_marginLeft="@dimen/dimen_padding_extra_small"
+    android:layout_marginRight="@dimen/dimen_padding_extra_small"
+    android:layout_marginTop="@dimen/dimen_padding_extra_small"
+    android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    >
+    card_view:cardCornerRadius="5dp"
+    card_view:cardElevation="@dimen/dimen_padding_extra_small"
+    card_view:layout_collapseMode="parallax">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:background="#000">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:background="#fff"
-            >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,14 +48,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_margin="5dp">
+                android:layout_margin="2dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="12dp">
+                    android:layout_marginLeft="12dp"
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -64,8 +65,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Curso:"
-                            android:textSize="17dp"/>
-
+                            android:textSize="17dp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -76,7 +76,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Profesor:"
-                            android:textSize="17dp"/>
+                            android:textSize="17dp" />
 
                     </LinearLayout>
 
@@ -88,7 +88,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Fecha:"
-                            android:textSize="17dp"/>
+                            android:textSize="17dp" />
 
                     </LinearLayout>
 
@@ -100,7 +100,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Hora Inicio:"
-                            android:textSize="17dp"/>
+                            android:textSize="17dp" />
 
                     </LinearLayout>
 
@@ -109,10 +109,11 @@
                         android:layout_height="wrap_content">
 
                         <TextView
+                            android:id="@+id/textView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Hora Fin:"
-                            android:textSize="17dp"/>
+                            android:textSize="17dp" />
 
                     </LinearLayout>
 
@@ -132,7 +133,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="NomCurso"
-                            android:textSize="17dp"/>
+                            android:textSize="17dp" />
 
                     </LinearLayout>
 
@@ -145,29 +146,31 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="nomProfesor"
-                            android:textSize="17dp"/>
+                            android:textSize="17dp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+
                         <TextView
                             android:id="@+id/alum_actv_fecha"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="fecha"
-                            android:textSize="17dp"/>
+                            android:textSize="17dp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+
                         <TextView
                             android:id="@+id/alum_actv_hini"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="hora_ini"
-                            android:textSize="17dp"/>
+                            android:textSize="17dp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -179,7 +182,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="hora_fin"
-                            android:textSize="17dp"/>
+                            android:textSize="17dp" />
                     </LinearLayout>
 
                 </LinearLayout>
