--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_alumno_graficos.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_alumno_graficos.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/dimen_padding_medium"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.AlumnoGraficosFragment">
 
     <LinearLayout
@@ -25,7 +26,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"></LinearLayout>
+            android:layout_weight="3">
+
+            <ListView
+                android:id="@+id/alum_lista_lstv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </ListView>
+        </LinearLayout>
 
     </LinearLayout>
 
