--- a/sme/resources/css/main.css
+++ b/sme/resources/css/main.css
@@ -1,22 +1,16 @@
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
+.grupo-fecha {}
 
+.grupo-fecha::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.item-fecha {
+  float: left;
+  width: 50%;
+}
