--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_usuario_add_dialog.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_usuario_add_dialog.xml
@@ -13,15 +13,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_padding_small"
         android:background="@drawable/side_item_layout_componet_small"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:gravity="center">
+            android:gravity="center"
+            android:background="@drawable/side_item_layout_componet_extra_small"
+            android:backgroundTint="@color/colorAccent">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -36,27 +38,35 @@
             android:layout_weight="1"
             android:paddingRight="@dimen/dimen_padding_medium">
 
-            <EditText
-                android:id="@+id/usu_add_etx_nom"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_nombres_usuario" />
+                android:textAlignment="center">
+
+                <EditText
+                    android:id="@+id/usu_add_etx_nom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_nombres_usuario" />
+
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_padding_small"
-        android:layout_marginTop="@dimen/dimen_padding_small"
         android:background="@drawable/side_item_layout_componet_small"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:gravity="center">
+            android:gravity="center"
+            android:background="@drawable/side_item_layout_componet_extra_small"
+            android:backgroundTint="@color/colorAccent">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -71,28 +81,34 @@
             android:layout_weight="1"
             android:paddingRight="@dimen/dimen_padding_medium">
 
-            <EditText
-                android:id="@+id/usu_add_etx_ape"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_apellido_usuario" />
+                android:textAlignment="center">
+
+                <EditText
+                    android:id="@+id/usu_add_etx_ape"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_apellido_usuario" />
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_padding_small"
-        android:layout_marginTop="@dimen/dimen_padding_small"
         android:background="@drawable/side_item_layout_componet_small"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:gravity="center">
+            android:gravity="center"
+            android:background="@drawable/side_item_layout_componet_extra_small"
+            android:backgroundTint="@color/colorAccent">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -107,29 +123,35 @@
             android:layout_weight="1"
             android:paddingRight="@dimen/dimen_padding_medium">
 
-            <EditText
-                android:id="@+id/usu_add_etx_email"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_email_usuario"
-                android:inputType="textEmailAddress" />
+                android:textAlignment="center">
+
+                <EditText
+                    android:id="@+id/usu_add_etx_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_email_usuario"
+                    android:inputType="textEmailAddress" />
+
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
-
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_padding_small"
-        android:layout_marginTop="@dimen/dimen_padding_small"
         android:background="@drawable/side_item_layout_componet_small"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:gravity="center">
+            android:gravity="center"
+            android:background="@drawable/side_item_layout_componet_extra_small"
+            android:backgroundTint="@color/colorAccent">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -144,31 +166,36 @@
             android:layout_weight="1"
             android:paddingRight="@dimen/dimen_padding_medium">
 
-            <EditText
-                android:id="@+id/usu_add_etx_dni_alum"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_dni_alumno"
-                android:inputType="numberSigned"
-                android:maxLength="8" />
+                android:textAlignment="center">
+
+                <EditText
+                    android:id="@+id/usu_add_etx_dni_alum"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_dni_alumno"
+                    android:inputType="numberSigned"
+                    android:maxLength="8" />
+
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
-
     </LinearLayout>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_padding_small"
-        android:layout_marginTop="@dimen/dimen_padding_small"
         android:background="@drawable/side_item_layout_componet_small"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:gravity="center">
+            android:gravity="center"
+            android:background="@drawable/side_item_layout_componet_extra_small"
+            android:backgroundTint="@color/colorAccent">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -183,29 +210,35 @@
             android:layout_weight="1"
             android:paddingRight="@dimen/dimen_padding_medium">
 
-            <EditText
-                android:id="@+id/usu_add_etx_pass"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_password_usuario"
-                android:inputType="textPassword" />
-        </LinearLayout>
+                android:textAlignment="center">
 
+                <EditText
+                    android:id="@+id/usu_add_etx_pass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_password_usuario"
+                    android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_padding_small"
-        android:layout_marginTop="@dimen/dimen_padding_small"
         android:background="@drawable/side_item_layout_componet_small"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:gravity="center">
+            android:gravity="center"
+            android:background="@drawable/side_item_layout_componet_extra_small"
+            android:backgroundTint="@color/colorAccent">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -220,15 +253,23 @@
             android:layout_weight="1"
             android:paddingRight="@dimen/dimen_padding_medium">
 
-            <EditText
-                android:id="@+id/usu_add_etx_pass_conf"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_pass_conf"
-                android:inputType="textPassword" />
-        </LinearLayout>
+                android:textAlignment="center">
 
+                <EditText
+                    android:id="@+id/usu_add_etx_pass_conf"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_pass_conf"
+                    android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
     </LinearLayout>
+
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -240,7 +281,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/side_item_layout_componet_small"
-            android:backgroundTint="@color/colorPrimaryDark"
+            android:backgroundTint="@color/colorAccent"
             android:text="@string/name_button_registrar"
             android:textColor="@android:color/white" />
 
