--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
@@ -1,63 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/degradado"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="15dp"
+    android:padding="10dp"
+    android:background="@drawable/degradado"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/side_item_layout_componet_small"
-        android:backgroundTint="@color/color_trans"
-        android:gravity="center"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:background="@drawable/side_item_layout_componet_small"
+
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        >
 
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:layout_gravity="center"
             app:srcCompat="@drawable/ic_logo_monitoreo" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
             android:height="20dp"
             android:gravity="center"
             android:text="@string/name_sistema"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="15dp" />
-
-        <Spinner
-            android:id="@+id/log_sp_TipoUsuario"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_margin="10dp"></Spinner>
+            android:textSize="16dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dimen_padding_small"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Seleccione tipo de usuario :"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textColor="@color/colorSecondaryText"/>
+
+            <Spinner
+                android:id="@+id/log_sp_TipoUsuario"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:textAlignment="center"/>
+
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/side_item_layout_componet_small"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="5"
-                android:gravity="center">
+                android:gravity="center"
+                android:background="@drawable/side_item_layout_componet_extra_small"
+                android:backgroundTint="@color/colorAccent">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -82,16 +107,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_user"
-                        android:textColor="@color/colorPrimaryDark" />
+                        android:inputType="textEmailAddress"
+                        android:textColor="@color/colorPrimaryDark"/>
 
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dimen_padding_small"
             android:background="@drawable/side_item_layout_componet_small"
             android:orientation="horizontal">
 
@@ -99,13 +125,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="5"
-                android:gravity="center">
+                android:gravity="center"
+                android:background="@drawable/side_item_layout_componet_extra_small"
+                android:backgroundTint="@color/colorAccent">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_icon_password"
-                    android:tint="@color/colorTextIcons" />
+                    android:tint="@color/colorTextIcons"
+                    />
             </LinearLayout>
 
 
@@ -127,7 +156,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_pass"
-                        android:inputType="textPassword" />
+                        android:inputType="textPassword"/>
+
                 </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
@@ -137,29 +167,34 @@
             android:id="@+id/log_chb_recUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:buttonTint="#FF7408"
             android:text="Recordar usuario"
-            android:textColor="#8F2F0D" />
+            android:buttonTint="@color/colorSecondaryText"
+            android:textColor="@color/colorSecondaryText"
+            android:layout_margin="5dp"
+            android:textSize="15sp"
+            android:layout_gravity="center"
+            />
 
         <Button
             android:id="@+id/log_btn_entrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/side_item_layout_componet_small"
-            android:backgroundTint="@color/colorPrimaryLight"
-            android:text="Entrar"
-            android:textColor="@color/colorPrimaryText" />
+            android:backgroundTint="@color/colorAccent"
+            android:text="Ingresar"
+            android:textColor="#ffffff"
+            android:layout_marginBottom="10dp"
+            />
 
 
-        <Button
-            android:id="@+id/log_btn_reg"
+        <TextView
+            android:id="@+id/log_tv_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/side_item_layout_componet_small"
-            android:backgroundTint="@color/colorPrimary"
-            android:text="Nuevo Usuario"
-            android:textColor="@color/colorPrimaryText" />
+            android:text="Registrate"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:textColor="@color/colorSecondaryText"/>
 
 
     </LinearLayout>
