--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/colors.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/colors.xml
@@ -2,11 +2,11 @@
 <resources>
     <color name="colorPrimaryDark">#B9B9B9</color>
     <color name="colorPrimary">#DADADA</color>
-    <color name="colorPrimaryLight">#DCEDC8</color>
-    <color name="colorTextIcons">#727272</color>
-    <color name="colorAccent">#1da957</color>
+    <color name="colorPrimaryLight">#ffffff</color>
+    <color name="colorTextIcons">#ffffff</color>
+    <color name="colorAccent">#e4b25e</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#757575</color>
     <color name="color_black_60">#a0000000</color>
-    <color name="color_trans">#ccffffff</color>
+    <color name="color_trans">#85ffffff</color>
 </resources>
