--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/arrays.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string-array name="TipoSession">
-        <item>Seleccione</item>
+        <item>— —</item>
         <item>Alumno</item>
         <item>Apoderado</item>
     </string-array>
